# ecommerce-backend

./: .gitignore  pyproject.toml
app/: main.py
app/auth/: services.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/products/: models.py  routes.py  schemas.py  services.py
app/scripts/: create_tables.py
app/users/: models.py  repository.py
